kubernetes/external/octoprint/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: octoprint
  namespace: external
  labels:
    kubernetes.io/service-name: octoprint
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.10.200.254"
