kubernetes/external/octoprint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint
  namespace: external
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
