kubernetes/external/octoprint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: OctoPrint
    gethomepage.dev/group: Home
    gethomepage.dev/icon: octoprint
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
spec:
  tls:
    - secretName: octoprint.saturn.ci
      hosts:
        - octoprint.saturn.ci
  rules:
    - host: octoprint.saturn.ci
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octoprint
                port:
                  number: 80
